--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,14 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
     compile 'io.reactivex.rxjava2:rxjava:2.0.8'
 
-
+    implementation "org.codehaus.groovy:groovy:3.0.8"
+    testImplementation platform("org.spockframework:spock-bom:2.0-groovy-3.0")
+    testImplementation "org.spockframework:spock-core"
     compile 'com.googlecode.json-simple:json-simple:1.1.1'
     testCompile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testImplementation platform("org.spockframework:spock-bom:2.0-M3-groovy-2.5")
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
