publish subscribe using observables

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
 dependencies {
     //compile group: 'org.json', name: 'json', version: '20180813'
     compile 'io.reactivex.rxjava2:rxjava:2.0.8'
+    compile 'com.github.javadev:underscore:1.67'
+
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.+'
     compile "org.slf4j:slf4j-simple:1.7.9"
 
